#92 navbar fix to overlap page

--- a/frontend/src/components/CreateRideComponents/DriverListing.css
+++ b/frontend/src/components/CreateRideComponents/DriverListing.css
@@ -9,8 +9,8 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 }
 
 .listingGrid {
-    background-size: cover !important;
-    height: calc(100% - 64px);
+    /* background-size: cover !important; */
+    height: 100%;
     margin: 0 !important;
 }
 
@@ -20,5 +20,5 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.5);
 }
