--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -13,3 +13,11 @@
     box-shadow: 5px black inset !important;
     background: white !important;
 }
+.navbar{
+    position: absolute !important;
+    width: 100%;
+    padding-top: 14px !important;
+    padding-bottom: 14px !important;
+    padding-left: 20px !important;
+    padding-right: 35px !important;
+}
